addon/traefik/traefik-dashboard-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: admin-traefik
