addon/traefik/traefik-demonset.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: admin
      port: 8080
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 1
      containers:
        - image: registry.cn-chengdu.aliyuncs.com/ops-k8s/traefik:v2.4
          name: traefik-ingress-lb
          ports:
            - name: web
              containerPort: 80
              hostPort: 80           #hostPort方式，将端口暴露到集群节点
            - name: websecure
              containerPort: 443
              hostPort: 443          #hostPort方式，将端口暴露到集群节点
            - name: admin
              containerPort: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            -  --providers.kubernetescrd
            -  --api.insecure
            -  --accesslog
            -  --entrypoints.web.Address=:80
            -  --entrypoints.websecure.Address=:443
            - --accesslog.filepath=/var/log/access.log
            - --accesslog.format=json
            - --metrics.prometheus
            - --api.dashboard
            - --ping
            - --tracing.elastic
            - --providers.kubernetesingress
      tolerations:              
        - operator: "Exists"
      nodeSelector:             
        traefik-ingress: "true"
