addon/traefik/traefik-secure-demonset.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: admin
      port: 8080
    - name: tcpep
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: udpep
      protocol: UDP
      port: 9000
      targetPort: 9000
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 1
      containers:
        - image: registry.cn-chengdu.aliyuncs.com/ops-k8s/traefik:v2.4
          name: traefik-ingress-lb
          ports:
            - name: web
              containerPort: 80
              hostPort: 80           #hostPort方式，将端口暴露到集群节点
            - name: websecure
              containerPort: 443
              hostPort: 443          #hostPort方式，将端口暴露到集群节点
            - name: admin
              containerPort: 8080
            - name: tcpep 
              containerPort: 8000
            - name: udpep 
              containerPort: 9000
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          args:
            -  --providers.kubernetescrd
            -  --providers.kubernetesingress
            -  --accesslog
            -  --api=true
            # -  --api.insecure=true
            -  --entrypoints.web.Address=:80
            -  --entrypoints.websecure.Address=:443
            -  --accesslog.filepath=/var/log/access.log
            -  --entrypoints.tcpep.address=:8000
            -  --entrypoints.udpep.address=:9000/udp
            -  --accesslog.format=json
            -  --metrics.prometheus
            -  --api.dashboard=true
            -  --log.level=INFO
            -  --api.debug=true
            -  --providers.kubernetescrd.allowcrossnamespace=false
            -  --providers.kubernetescrd.namespaces=kube-system
            -  --ping            
    

      tolerations:              
        - operator: "Exists"
      nodeSelector:             
        traefik-ingress: "true"
